# nutritionist-assistant-jul-26

./: .gitignore  could-deployment-plan.md  local_deployment_script  pyproject.toml  vercel.json  view_user.py
agent/: llm.py  plan_import.py  prompt_inspector.py  prompts.py  session.py  users.py
evals/: runner.py
new_features_history/: DESIGN_REDESIGN_PLAN.md  PRD-discard-plan-changes.md  PRD-login-persistent-meal-plan.md  PRD-prompt-inspector.md  PRD-save-plan-explicit.md  PRD-upload-existing-plan.md
src/app/: dependencies.py  main.py
src/app/routes/: auth.py  chat.py  plan.py  profile.py
src/app/templates/: onboarding.html
tests/: conftest.py  test_auth.py  test_chat.py  test_persistence.py  test_plan.py  test_plan_import.py  test_profile.py  test_prompt_inspector.py  test_prompts.py  test_session_resume.py  test_users.py
tests/new_features_history/: PRD-llm-context.md
