[project]
name = "nutri-assistant"
version = "0.1.0"
description = "AI nutritionist agent — Brazilian cuisine, LLM-backed meal planning."
requires-python = ">=3.12"

# Runtime dependencies. One line of reasoning each — per project convention.
dependencies = [
    "fastapi>=0.136.0",        # web framework, handles HTTP requests and routing
    "uvicorn>=0.44.0",         # ASGI server that actually runs the FastAPI app
    "pydantic>=2.13.3",        # validates data in/out; models our UserProfile + MealPlan
    "python-dotenv>=1.2.2",    # loads API keys from .env into the environment
    "httpx>=0.28.1",           # HTTP client — used by TestClient and later by tool calls
    "google-genai>=1.0.0",     # official Gemini SDK — the ONLY place we call the LLM
    "jinja2>=3.1.4",           # HTML templating — FastAPI uses it to render onboarding.html
    "pypdf>=6.14.2",            # extract text from uploaded meal-plan PDFs in /plan/import
    "python-multipart>=0.0.32", # required by FastAPI for multipart file uploads
]

[dependency-groups]
# Development-only. Not installed in production builds.
dev = [
    "pytest>=9.0.3",           # test runner
]

[tool.pytest.ini_options]
# Makes `from src.app.main import app` resolvable from tests without installing the package.
pythonpath = ["."]
testpaths = ["tests"]
# Keep pytest's internal cache out of the project root; see non-relevant/README.md.
cache_dir = "non-relevant/.pytest_cache"
